Table header overlap fix.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -456,3 +456,7 @@ button.redify-link {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+
+.overlap-fix {
+  z-index: 9999;
+}
